# pybind11_segfault_example

./: CMakeLists.txt  README.md  foobar.cpp  foobar.hpp  main.cpp  py_test.py
